--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <div class="enter-wrapper">
     <div class="top">
-      <img alt="flickman. logo" class="fillWidth" src="/images/logos/FlickmanChevron.png">
+      <img alt="flickman. logo" class="fillWidth" src="/images/logos/flickman MEDIA logo white on transparent.png">
       <a href="/travel/"><button class = "welcome-btn">Enter</button></a>
       <a id="insta" href="https://www.instagram.com/flickman/" target="_blank"><button class = "welcome-btn">Instagram</button></a>
     </div>
