Added new instagram handle

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <div class="top">
       <img alt="flickman. logo" class="fillWidth" src="/images/logos/flickman MEDIA logo white on transparent.png">
       <a href="/travel/"><button class = "welcome-btn">Enter</button></a>
-      <a id="insta" href="https://www.instagram.com/flickman/" target="_blank"><button class = "welcome-btn">Instagram</button></a>
+      <a id="insta" href="https://www.instagram.com/flickman.media/" target="_blank"><button class = "welcome-btn">Instagram</button></a>
     </div>
     <div class="bottom">
 
