Changed meta data

--- a/index.html
+++ b/index.html
@@ -2,19 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110038480-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-110038480-1');
-  </script>
-  <title>flickman.</title>
+  <title>Flickman Media</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -32,7 +20,7 @@
 
   <!-- More meta tags -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Flickman. A personal brand willing to help create you meet your creative goals." />
+  <meta name="description" content="A media company dedicated to helping create captivating videos to tell your brand's story." />
 
   <!-- Style sheets and fonts -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
