--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="enter-wrapper">
     <div class="top">
       <img alt="flickman. logo" class="fillWidth" src="/images/logos/flickman MEDIA logo white on transparent.png">
-      <a href="/travel/"><button class = "welcome-btn">Work With Us</button></a>
+      <a href="/services/"><button class = "welcome-btn">Work With Us</button></a>
       <a id="insta" href="https://www.instagram.com/flickman.media/" target="_blank"><button class = "welcome-btn">Instagram</button></a>
     </div>
     <div class="bottom">
