--- a/services/index.html
+++ b/services/index.html
@@ -57,7 +57,7 @@
   <div class="wrapper">
 
     <div class="about-title">
-      <h1>travel</h1>
+      <h1>services</h1>
       <div class="center-line"></div>
     </div>
 
@@ -89,7 +89,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="copyright">&copy; 2019 Matt Hickman. All rights reserved.</p>
+      <p class="copyright">&copy; 2019 Flickman Media. All rights reserved.</p>
     </div>
   </footer>
 
