--- a/about/index.html
+++ b/about/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Services | Flickman Media</title>
+  <title>About | Flickman Media</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -43,11 +43,11 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/portraits/">Home</a></li>
-          <li class="active"><a class="current" href="/travel/">Services</a></li>
-          <li><a href="/wallpapers/">Work</a></li>
-          <li><a href="/about/">About</a></li>
-          <li><a href="/videos/">Contact</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="/services/">Services</a></li>
+          <li><a href="/work/">Work</a></li>
+          <li class="active"><a class="current" href="/about/">About</a></li>
+          <li><a href="/contact/">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -57,7 +57,7 @@
   <div class="wrapper">
 
     <div class="about-title">
-      <h1>travel</h1>
+      <h1>about</h1>
       <div class="center-line"></div>
     </div>
 
@@ -124,7 +124,7 @@
 
   <footer class="footer">
     <div class="container">
-      <p class="copyright">&copy; 2019 Matt Hickman. All rights reserved.</p>
+      <p class="copyright">&copy; 2019 Flickman Media. All rights reserved.</p>
     </div>
   </footer>
 
