--- a/work/index.html
+++ b/work/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Services | Flickman Media</title>
+  <title>Work | Flickman Media</title>
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -57,7 +57,7 @@
   <div class="wrapper">
 
     <div class="about-title">
-      <h1>services</h1>
+      <h1>work</h1>
       <div class="center-line"></div>
     </div>
 
