--- a/contact/index.html
+++ b/contact/index.html
@@ -70,14 +70,13 @@
             <img class="cityscapes" src="/images/travel/Coconut.jpg">
           </div>
           <div class="col-md-4 center">
-            <img class="cityscapes" src="/images/travel/BS5A4930.jpg">
-            <img class="cityscapes" src="/images/travel/DJI_0037.jpg">
-            <img class="cityscapes" src="/images/travel/DSC_0184.jpg">
+            <form method="post" name="myemailform" action="form-to-email.php">
+              Enter Name: <input type="text" name="name"> Enter Email Address: <input type="text" name="email"> Enter Message: <textarea name="message"></textarea>
+              <input type="submit" value="Send Form">
+            </form>
+
           </div>
           <div class="col-md-4 center">
-            <img class="cityscapes" src="/images/travel/BS5A9032.jpg">
-            <img class="cityscapes" src="/images/travel/DJI_0121.jpg">
-            <img class="cityscapes" src="/images/travel/DSC04409.jpg">
           </div>
         </div>
       </div>
