--- a/contact/index.html
+++ b/contact/index.html
@@ -65,16 +65,17 @@
       <div class="container about">
         <div class="row">
           <div class="col-md-4 center">
-            <img class="cityscapes" alt="castle" src="/images/travel/BS5A4760at360×450.jpg">
-            <img class="cityscapes" src="/images/travel/BS5A4813.jpg">
-            <img class="cityscapes" src="/images/travel/Coconut.jpg">
           </div>
           <div class="col-md-4 center">
             <form method="post" name="myemailform" action="form-to-email.php">
-              Enter Name: <input type="text" name="name"> Enter Email Address: <input type="text" name="email"> Enter Message: <textarea name="message"></textarea>
+              	Enter Name: <input type="text" name="name"> 
+			
+	   			Enter Email Address: <input type="text" name="email"> 
+				
+				Enter Message: <textarea name="message"></textarea>
+
               <input type="submit" value="Send Form">
             </form>
-
           </div>
           <div class="col-md-4 center">
           </div>
