--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
   <link href="https://fonts.googleapis.com/css?family=Karla" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="/css/global.css" />
-  <link rel="stylesheet" type="text/css" href="/css/travel.css" />
+  <link rel="stylesheet" type="text/css" href="/css/contact.css" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -68,11 +68,7 @@
           </div>
           <div class="col-md-4 center">
             <form method="post" name="myemailform" action="form-to-email.php">
-              	Enter Name: <input type="text" name="name"> 
-			
-	   			Enter Email Address: <input type="text" name="email"> 
-				
-				Enter Message: <textarea name="message"></textarea>
+              Enter Name: <input type="text" name="name"> Enter Email Address: <input type="text" name="email"> Enter Message: <textarea name="message"></textarea>
 
               <input type="submit" value="Send Form">
             </form>
