Changed file path of php file

--- a/contact/index.html
+++ b/contact/index.html
@@ -67,7 +67,7 @@
           <div class="col-md-4 center">
           </div>
           <div class="col-md-4 center">
-            <form method="post" name="myemailform" action="form-to-email.php">
+            <form method="post" name="myemailform" action="/contact/form-to-email.php">
               Enter Name: <input type="text" name="name">\n\nEnter Email Address: <input type="text" name="email">\n\nEnter Message: <textarea name="message"></textarea>\n\n
 
               <input type="submit" value="Send Form">
