--- a/contact/index.html
+++ b/contact/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="col-md-4 center">
             <form method="post" name="myemailform" action="/contact/form-to-email.php">
-              Enter Name: <input type="text" name="name">\n\nEnter Email Address: <input type="text" name="email">\n\nEnter Message: <textarea name="message"></textarea>\n\n
+              Enter Name: <input type="text" name="name"><br>Enter Email Address: <input type="text" name="email"><br>Enter Message: <textarea name="message"></textarea><br>
 
               <input type="submit" value="Send Form">
             </form>
