--- a/contact/index.html
+++ b/contact/index.html
@@ -67,7 +67,7 @@
           <div class="col-md-4 center">
           </div>
           <div class="col-md-4 center">
-            <form method="post" name="myemailform" action="/contact/form-to-email.php">
+            <form method="post" name="myemailform" action="https://formspree.io/matthickman10@gmail.com">
               Enter Name: <input type="text" name="name"><br><br>Enter Email Address: <input type="text" name="email"><br><br>Enter Message: <textarea name="message"></textarea><br><br>
 
               <input type="submit" value="Send Form">
