--- a/contact/index.html
+++ b/contact/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="col-md-4 center">
             <form method="post" name="myemailform" action="https://formspree.io/matthickman10@gmail.com">
-              Enter Name: <input type="text" name="name"><br><br>Enter Email Address: <input type="text" name="email"><br><br>Enter Message: <br><textarea name="message">Lit</textarea><br><br>
+              Name: <input placeholder="What do people call you?" type="text" name="name"><br><br>Enter Email Address: <input placeholder="Where can we reach you?" type="text" name="email"><br><br>Enter Message: <br><textarea name="message">How can we help you?</textarea><br><br>
 
               <input type="submit" value="Send Form">
             </form>
