New thank-you page

--- a/contact/index.html
+++ b/contact/index.html
@@ -71,7 +71,7 @@
               Name:  <input placeholder="What do people call you?" type="text" name="name"><br><br>Enter Email Address:  <input placeholder="Where can we reach you?" type="text" name="email"><br><br>Enter Message:  <br><textarea name="message">How can we help you?</textarea><br><br>
 
               <input type="submit" value="Send Form">
-			  <input type="hidden" name="_next" value="//site.io/thanks.html" />
+			  <input type="hidden" name="_next" value="/thank-you.html" />
             </form>
           </div>
           <div class="col-md-4 center">
