--- a/contact/index.html
+++ b/contact/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="col-md-4 center">
             <form method="post" name="myemailform" action="https://formspree.io/matthickman10@gmail.com">
-              Name:  <input placeholder="What do people call you?" type="text" name="name"><br><br>Enter Email Address:  <input placeholder="Where can we reach you?" type="text" name="email"><br><br>Enter Message:  <br><textarea name="message">How can we help you?</textarea><br><br>
+              Name:  <input placeholder="Your name" type="text" name="name"><br><br>Email Address:  <input placeholder="Your email" type="text" name="email"><br><br>Enter Message:  <br><textarea name="message" placeholder="How can we help you?"></textarea><br><br>
 
               <input type="submit" value="Send Form">
 			  <input type="hidden" name="_next" value="/thank-you.html" />
