--- a/about/index.html
+++ b/about/index.html
@@ -65,54 +65,11 @@
       <div class="container about">
         <div class="row">
           <div class="col-md-4 center">
-            <img class="cityscapes" alt="castle" src="/images/travel/BS5A4760at360×450.jpg">
-            <img class="cityscapes" src="/images/travel/BS5A4813.jpg">
-            <img class="cityscapes" src="/images/travel/Coconut.jpg">
-            <img class="cityscapes" src="/images/travel/DJI_0185.jpg">
-            <img class="cityscapes" src="/images/travel/DSC04424.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0261.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0642.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_3541.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_5337.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_6457.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_6821.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_7855.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8227.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8668.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8749.jpg">
           </div>
           <div class="col-md-4 center">
-            <img class="cityscapes" src="/images/travel/BS5A4930.jpg">
-            <img class="cityscapes" src="/images/travel/DJI_0037.jpg">
-            <img class="cityscapes" src="/images/travel/DSC_0184.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0147.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0414.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0699.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_4939.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_5588.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_6628.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_7111.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_7914-2.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8293.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8724.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_9886.jpg">
+            Who are we?
           </div>
           <div class="col-md-4 center">
-            <img class="cityscapes" src="/images/travel/BS5A9032.jpg">
-            <img class="cityscapes" src="/images/travel/DJI_0121.jpg">
-            <img class="cityscapes" src="/images/travel/DSC04409.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0167.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0509.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_0758.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_5126.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_5847.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_6696.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_7611.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8125.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8419.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_8733.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_9905.jpg">
-            <img class="cityscapes" src="/images/travel/MDH_9999.jpg">
           </div>
         </div>
       </div>
