--- a/contact/index.html
+++ b/contact/index.html
@@ -71,7 +71,7 @@
               Name:  <input placeholder="Your name" type="text" name="name"><br><br>Email Address:  <input placeholder="Your email" type="text" name="email"><br><br>Enter Message:  <br><textarea name="message" placeholder="How can we help you?"></textarea><br><br>
 
               <input type="submit" value="Send Form">
-			  <input type="hidden" name="_next" value="/contact/thank-you.html" />
+			  <input type="hidden" name="_next" value="/contact/thank-yu.html" />
             </form>
           </div>
           <div class="col-md-4 center">
