--- a/contact/index.html
+++ b/contact/index.html
@@ -67,13 +67,15 @@
           <div class="col-md-4 center">
           </div>
           <div class="col-md-4 center">
+            <h2>WE'D LOVE TO WORK WITH YOU.</h2>
+            <h3> Have a new project? A random question? Want to grab a coffee? There is a reason you are here. There is a story you are ready to tell. Reach out and let's create something remarkable. Fill out the form and we
+            will get back to you within 24 hours.</h3>
+            <div class="center-line"></div>
             <form method="post" name="myemailform" action="https://formspree.io/matthickman10@gmail.com">
-              Name: <input placeholder="Your name" type="text" name="name"><br><br>Email Address: <input placeholder="Your email" type="text" name="email"><br><br>Enter Message: <br><textarea name="message" placeholder="How can we help you?"></textarea><br><br>
-
-              <input type="submit" value="Send Form">
+              Name: <input placeholder="Your name" type="text" name="name"><br><br>Email Address: <input type="text" name="_replyto" placeholder="Your email" /><br><br>Enter Message: <br><textarea name="message" placeholder="How can we help you?"></textarea><br><br>
+              <input type="submit" value="SUBMIT">
               <input type="hidden" name="_next" value="/contact/thank-you.html" />
               <input type="hidden" name="_subject" value="New submission!" />
-              <input type="text" name="_replyto" placeholder="Your email" />
             </form>
           </div>
           <div class="col-md-4 center">
