--- a/about/index.html
+++ b/about/index.html
@@ -57,7 +57,11 @@
   <div class="wrapper">
 
     <div class="about-title">
-      <h1>about</h1>
+      <h1>we are flickman media</h1>
+      <div class="center-line"></div>
+      <h1>Our Story</h1>
+      <div class="center-line"></div>
+      <h1>Our Abilities</h1>
       <div class="center-line"></div>
     </div>
 
