--- a/contact/index.html
+++ b/contact/index.html
@@ -57,7 +57,7 @@
   <div class="wrapper">
 
     <div class="about-title">
-      <h1>contact</h1>
+      <h1>let's work together</h1>
       <div class="center-line"></div>
     </div>
 
