--- a/work/index.html
+++ b/work/index.html
@@ -57,7 +57,7 @@
   <div class="wrapper">
 
     <div class="about-title">
-      <h1>work</h1>
+      <h1>what we have done</h1>
       <div class="center-line"></div>
     </div>
 
