--- a/about/index.html
+++ b/about/index.html
@@ -59,9 +59,9 @@
     <div class="about-title">
       <h1>we are flickman media</h1>
       <div class="center-line"></div>
-      <h1>Our Story</h1>
+      <h1>our story</h1>
       <div class="center-line"></div>
-      <h1>Our Abilities</h1>
+      <h1>our abilities</h1>
       <div class="center-line"></div>
     </div>
 
